<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_weight=".2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:textColor="@color/tColor"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_weight=".2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fecha"
            android:textStyle="bold"
            android:textColor="@color/tColor"
            />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_weight=".2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora_inicio"
            android:textStyle="bold"
            android:textColor="@color/tColor"
            />

        <EditText
            android:id="@+id/etHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_weight=".2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distancia"
            android:textStyle="bold"
            android:textColor="@color/tColor"
            />

        <EditText
            android:id="@+id/etDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_weight=".2"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idSuper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/superficie"
            android:textStyle="bold"
            android:textColor="@color/tColor"
            />

        <EditText
            android:id="@+id/etSuper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/border"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2">

        <Button
            android:id="@+id/btCancela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonCancel"
            android:text="@string/lbl_cancela" />

        <Button
            android:id="@+id/btInserta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_inserta"
            android:background="@color/colorButtonInsert"/>
    </LinearLayout>
</LinearLayout>